Text corrections on index.html page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="nav__cabecacho">
             <ul class="lista__cabecalho">
                 <li class="itens__cabecalho"><a href="#" class="opcoes__cabecalho">Home</a></li>
-                <li class="itens__cabecalho"><a href="#" class="opcoes__cabecalho">Youtube</a></li>
+                <li class="itens__cabecalho"><a href="#" class="opcoes__cabecalho">YouTube</a></li>
                 <li class="itens__cabecalho"><a href="#" class="opcoes__cabecalho">Facebook</a></li>
             </ul>
         </nav>
@@ -58,7 +58,7 @@
         <ul class="diferenciais__lista">
             <li class="diferenciais__item diferenciais__item-qualidade">
                 <h2 class="item__titulo">Servidores de Qualidade</h2>
-                <p class="item__texto">Temos os melhores servidores da atualidade, com tecnologias esclusivas do
+                <p class="item__texto">Temos os melhores servidores da atualidade, com tecnologias exclusivas do
                     mercado.
                 </p>
             </li>
@@ -68,9 +68,9 @@
                     segurança em nossos servidores.</p>
             </li>
             <li class="diferenciais__item diferenciais__item-vpn">
-                <h2 class="item__titulo">VPN Ilimitada Inbutida</h2>
-                <p class="item__texto">Para usuarios que nescessitam desta opção nos a ofereçemos com disponibilidade
-                    total 24h por dia.</p>
+                <h2 class="item__titulo">VPN Ilimitada Embutida</h2>
+                <p class="item__texto">Para usuários que necessitam desta opção nos a oferecemos com disponibilidade
+                    total 24h por dia 7 dias por semana.</p>
             </li>
         </ul>
     </section>
@@ -93,7 +93,7 @@
             </ul>
             <p class="sobre__texto">Desenvolvemos servidores para todos os jogos</p>
         </div>
-        <img class="sobre__imagem" src="img/sobre-apeperia.png" alt="Sobre a Apeperia">
+        <img class="sobre__imagem" src="img/sobre-apeperia.png" alt="Sobre a GamersNext">
     </section>
     <section class="planos container">
         <h2 class="planos__titulo"></h2>
